<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pick_destination"
            android:icon="@drawable/app_logo"
            android:title="@string/pick_your_destination" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_bookings"
            android:title="@string/my_bookings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>