<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:id="@+id/layout_root">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/home_screen_image"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_name"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/destination_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_available"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_vehicle_type"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_available"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_vehicle_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_vehicle"
        android:textColor="@color/colorDarkGreen"/>

    <Spinner
        android:id="@+id/spinner_pick_vehicle_reg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_no_vehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currently_no_vehicles_added"
        android:gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_confirm_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGreen"
        android:textColor="@color/white"
        android:text="@string/confirm_booking"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>