<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.SignUpFragment"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:id="@+id/layout_sign_up">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorDarkGreen"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="10dp"
        android:background="@color/colorDarkGreen"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="30dp"/>


</LinearLayout>