<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_booking"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_number"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_booking_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_number"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_vehicle_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_booking"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_booked_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_name"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_status"
            android:textColor="@color/colorDarkGreen"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/booking_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:textAllCaps="true" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

</LinearLayout>